--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -102,6 +102,7 @@ nav .container {
 }
 .business-info span {
   color: black;
+  margin: 1.5rem 0;
 }
 .business-info .title {
   padding: 1rem 2rem;
